samples/_failures_safe/1761536591_d76b49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f774bee8.c: In function ‘main’:
./samples/SAFE/__tmp_f774bee8.c:137:12: error: missing terminating " character
  137 |     printf("Enter first matrix
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f774bee8.c:137:5: error: expected expression at end of input
  137 |     printf("Enter first matrix
      |     ^~~~~~
./samples/SAFE/__tmp_f774bee8.c:137:5: error: expected declaration or statement at end of input
